2016-11-15  Bob Halley  <halley@dnspython.org>

	* Fixed regression where trailing zeros in APL RRs were not
	  suppressed, and then fixed the problem where trailing zeros
	  were not added back properly on python 3 when needed.

2016-10-10  Bob Halley  <halley@dnspython.org>

	* Added OPENPGPKEY RR support.

2016-09-30  Bob Halley  <halley@dnspython.org>

	* Much of the internals of dns.query.udp() and dns.query.tcp()
	  have been factored out into dns.query.send_udp(),
	  dns.query.receive_udp(), dns.query.send_tcp(), and
	  dns.query.receive_tcp().  Applications which want more control
	  over the socket may find the new routines helpful; for example
	  it would be easy to send multiple queries over a single TCP
	  connection.

2016-09-30  Bob Halley  <halley@dnspython.org>

	* (Version 1.15.0 released)

2016-09-29  Bob Halley  <halley@dnspython.org>

	* IDNA 2008 support is now available if the "idna" module has been
	  installed and IDNA 2008 is requested.  The default IDNA behavior
	  is still IDNA 2003.  The new IDNA codec mechanism is currently
	  only useful for direct calls to dns.name.from_text() or
	  dns.name.from_unicode(), but in future releases it will be
	  deployed throughout dnspython, e.g. so that you can read a
	  masterfile with an IDNA 2008 codec in force.

	* By default, dns.name.to_unicode() is not strict about which
	  version of IDNA the input complies with.  Strictness can be
	  requested by using one of the strict IDNA codecs.

	* Add AVC RR support.

	* Some problems with newlines in various output modes have been
	  addressed.

	* dns.name.to_text() now returns text and not bytes on Python 3.x

	* More miscellaneous fixes for the Python 2/3 codeline merge.

2016-05-27  Bob Halley  <halley@dnspython.org>

	* (Version 1.14.0 released)

	* Add CSYNC RR support

	* Fix bug in LOC which destroyed N/S and E/W distinctions within
	  a degree of the equator or prime merdian respectively.
