@@ -1,3 +1,8 @@
+2017-01-01  Bob Halley  <halley@dnspython.org>
+
+	* dns/rdatatype.py: CNAME is now a singleton, as the reasons
+	  for permitting multiple CNAMEs are now largely historical.
+
 2016-11-15  Bob Halley  <halley@dnspython.org>
 
 	* Fixed regression where trailing zeros in APL RRs were not
